# adoy

./: 404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
configuration/: index.html
content/: index.html
docs/: configuration.md  content.md  getting-started.md  index.md  theming.md
getting-started/: index.html
search/: search_index.json
src/adoy/: builder.py  cache.py  cli.py  models.py  parser.py  renderer.py  validator.py
src/adoy/scaffold/: CLAUDE.md  adoy.toml
src/adoy/scaffold/content/blog/: hello-world.md
src/adoy/scaffold/templates/: base.html  post.html  tag.html  tags.html
tests/: conftest.py  test_builder.py  test_cache.py  test_models.py  test_parser.py  test_renderer.py  test_validator.py
theming/: index.html
